add putt and positive buttons

--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
             <div class='team-container'>Team 2: <div id='team-two-points'></div></div>
         </div> -->
         <div class='random-throw'>
-            <div id='random-throw-result'></div>
+            <div class='result' id='random-throw-result'></div>
         </div>
         <div class='button-container'>
             <button id="random-throw-button">Throw This!</button>
+        </div>
+        <div class='random-throw'>
+            <div id='random-putt-result' class='result'></div>
+        </div>
+        <div class='button-container'>
+            <button id="random-putt-button">Putt This!</button>
+        </div>
+        <div class='random-throw'>
+            <div id='random-kind-result' class='result'></div>
+        </div>
+        <div class='button-container'>
+            <button id="random-kind-button">Good Luck!</button>
         </div>
 
     </main>
