add points for two teams

--- a/index.html
+++ b/index.html
@@ -9,10 +9,19 @@
 </head>
 <body>
     <main>
-        <!-- <div class="info">
-            <div class='team-container'>Team 1: <div id="team-one-points"></div></div>
-            <div class='team-container'>Team 2: <div id='team-two-points'></div></div>
-        </div> -->
+        <div class="info">
+            <div class='team-container'>Team 1: 
+                <span class="increment" id="one-minus"><i class="fa fa-minus"></i></span>
+                <div id="team-one-points" class='points'>6</div>
+                <span class="increment" id='one-plus'><i class="fa fa-plus"></i></span>
+            </div>
+            <div class='team-container'>Team 2: 
+                <span class="increment" id="two-minus"><i class="fa fa-minus"></i></span>
+                <div id="team-one-points" class='points'>6</div>
+                <span class="increment" id='two-plus'><i class="fa fa-plus"></i></span>
+            </div>        
+        </div>
+
         <div class='random-throw'>
             <div class='result' id='random-throw-result'></div>
         </div>
